--- a/xgen.grammar/xtend-gen/xgen/generator/.gitignore
+++ b/xgen.grammar/xtend-gen/xgen/generator/.gitignore
@@ -1,2 +1,7 @@
 /.GrammarGenerator.java._trace
 /GrammarGenerator.java
+/.ReplaceInitial.java._trace
+/.RemoveRemainingInitial.java._trace
+/.ReplaceInputValue.java._trace
+/.ReplaceStateName.java._trace
+/.ReplaceStateRef.java._trace
