Included states and transitions in the post-processors

--- a/xgen.application/xtend-gen/xgen/generator/.gitignore
+++ b/xgen.application/xtend-gen/xgen/generator/.gitignore
@@ -11,3 +11,7 @@
 /ReplaceStateName.java
 /ReplaceStateRef.java
 /.ReplaceActionValue.java._trace
+/.ReplaceRemainingInitials.java._trace
+/.RemoveRemainingInitials.java._trace
+/.NameStates.java._trace
+/.UseStates.java._trace
